--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-static-example-basic",
-  "version": "1.0.1",
+  "name": "rogue-blog",
+  "version": "1.0.2",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -21,6 +21,9 @@
   },
   "devDependencies": {
     "eslint-config-react-tools": "1.x.x",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "serve": "^6.1.0"
   }
 }
