updated markdown rendering and add incomplete github post

--- a/package.json
+++ b/package.json
@@ -8,21 +8,26 @@
     "stage": "react-static build --staging",
     "build": "react-static build",
     "serve": "serve dist -p 3000",
-    "test": "eslint ./src/"
+    "test": "jest ./"
   },
   "dependencies": {
     "chokidar": "2.0.3",
+    "fs-extra": "^6.0.1",
+    "gray-matter": "^4.0.1",
     "htmr": "0.6.3",
-    "jdown": "^0.3.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-hot-loader": "^4.0.0-beta.21",
     "react-router": "^4.2.0",
-    "react-static": "^5.9.5"
+    "react-static": "^5.9.5",
+    "remark": "^9.0.0",
+    "remark-html": "^7.0.0",
+    "walk": "^2.3.13"
   },
   "devDependencies": {
     "eslint-config-react-tools": "1.x.x",
     "extract-text-webpack-plugin": "^3.0.2",
+    "jest": "^23.2.0",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "serve": "^6.1.0"
