--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "fs-extra": "^6.0.1",
     "gray-matter": "^4.0.1",
     "htmr": "0.6.3",
+    "normalize.css": "^8.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-hot-loader": "^4.0.0-beta.21",
     "react-router": "^4.2.0",
-    "react-static": "^5.9.5",
+    "react-static": "^5.9.7",
     "remark": "^9.0.0",
     "remark-html": "^7.0.0",
     "walk": "^2.3.13"
@@ -29,6 +30,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "jest": "^23.2.0",
     "node-sass": "^4.7.2",
+    "postcss-loader": "^2.1.5",
     "sass-loader": "^6.0.6",
     "serve": "^6.1.0"
   }
