--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "react-dom": "^16.0.0",
     "react-hot-loader": "^4.0.0-beta.21",
     "react-router": "^4.2.0",
+    "react-router-ga": "^1.0.0",
     "react-static": "^5.9.7",
     "remark": "^9.0.0",
     "remark-html": "^7.0.0",
     "walk": "^2.3.13"
   },
   "devDependencies": {
+    "dotenv-webpack": "^1.5.7",
     "eslint-config-react-tools": "1.x.x",
     "extract-text-webpack-plugin": "^3.0.2",
     "jest": "^23.2.0",
