--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "chokidar": "2.0.3",
+    "directory-tree": "^2.1.1",
     "fs-extra": "^6.0.1",
     "gray-matter": "^4.0.1",
     "htmr": "0.6.3",
