--- a/package.json
+++ b/package.json
@@ -11,30 +11,27 @@
     "test": "jest ./"
   },
   "dependencies": {
-    "chokidar": "2.0.3",
-    "directory-tree": "^2.1.1",
-    "fs-extra": "^6.0.1",
-    "gray-matter": "^4.0.1",
-    "htmr": "0.6.3",
-    "normalize.css": "^8.0.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-hot-loader": "^4.0.0-beta.21",
-    "react-router": "^4.2.0",
-    "react-router-ga": "^1.0.0",
-    "react-static": "^5.9.7",
-    "remark": "^9.0.0",
-    "remark-html": "^7.0.0",
-    "walk": "^2.3.13"
+    "@reach/router": "^1.2.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-hot-loader": "^4.6.3",
+    "react-static": "^6.0.18",
+    "react-static-plugin-sass": "^6.0.8"
   },
   "devDependencies": {
+    "chokidar": "2.0.4",
+    "directory-tree": "^2.2.0",
     "dotenv-webpack": "^1.5.7",
     "eslint-config-react-tools": "1.x.x",
     "extract-text-webpack-plugin": "^3.0.2",
-    "jest": "^23.2.0",
-    "node-sass": "^4.7.2",
-    "postcss-loader": "^2.1.5",
-    "sass-loader": "^6.0.6",
-    "serve": "^7.0.0"
+    "fs-extra": "^7.0.1",
+    "gray-matter": "^4.0.1",
+    "htmr": "0.7.0",
+    "jest": "^23.6.0",
+    "normalize.css": "^8.0.1",
+    "remark": "^10.0.1",
+    "remark-html": "^9.0.0",
+    "serve": "^10.1.1",
+    "walk": "^2.3.14"
   }
 }
